Fix image height when height property is added (#277)
In this case height: auto is needed from css otherwise the image will
have a distorted aspect ratio.

--- a/src/theme/styles.less
+++ b/src/theme/styles.less
@@ -214,6 +214,7 @@
 
     img {
       max-width: 300px;
+      // height: auto;  // this is not critical and breaks cypress tests
       align-self: center;
     }
   }
@@ -228,6 +229,7 @@
 
     img {
       max-width: 100%;
+      height: auto;
     }
   }
 }
